--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.0",
     "jest": "^26.0.1",
+    "lodash": ">=4.17.19",
     "rimraf": "^3.0.2",
     "rollup": "^2.16.0",
     "rollup-plugin-typescript2": "^0.27.1",
